# PlayWrightPussyCream

./: README.md
KAG/: PAWSP1.ipynb  PAWSPV2.ipynb  README.MD
UVWORK/: README.MD
UVWORK/myappu1/: README.md  hello.py  pyproject.toml  requirements.txt
UVWORK/tr3/: hello.py  pyproject.toml
UVWORK/try1/: hello.py  pyproject.toml
UVWORK/try1/tests/: test_main.py
uvTESTS/: README.MD  hello.py  pyproject.toml
uvTESTS/p1/: pyproject.toml
uvTESTS/p2/: hello.py  pyproject.toml
wander/: README.MD
ytz/: README.MD
ytz/WAWPP/: README.MD
ytz/WAWPP/v1/: README.md  main.py  pyproject.toml
ytz/WAWPP/v1/panty/: paneltext.py
ytz/WAWPP/v1/src/: file1.py
