[project]
name = "try1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.5",
    "requests",
    "fastapi>=0.115.0",
    "jupyter>=1.1.1",
    "pandas>=2.2.3",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
]
